<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Goga</string>
    <string name="titke">title</string>
    <string name="cloud_upload_complete">Uploaded image.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">That&amp;apos;s the image to draw the progressbar around.</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="menu_action_refresh">refresh</string>
    <string name="menu_action_more">more</string>
    <string name="menu_action_about">about</string>
    <string name="menu_action_profile">profile</string>
    <string name="menu_action_logout">logout</string>
    <string name="menu_action_save">save</string>
    <string name="menu_action_weblink">go to web</string>
    <string name="menu_action_copy_title">copy title</string>
    <string name="menu_action_translate_title">translate title to French</string>
    <string name="menu_action_share">share</string>
    <string name="menu_action_share_all">share both</string>
    <string name="menu_action_share_text">share title only</string>
    <string name="menu_action_share_image">share image only</string>
    <string name="mxx_view_string_nonetwork">no network</string>
    <string name="mxx_view_string_nomore">no more to load</string>
    <string name="str_back_twice_exit">Press back again quickly to exit</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="str_loading">loading…</string>
    <string name="str_upload">say something…</string>
    <string name="str_waiting">waiting…</string>
    <string name="str_about_goga">Goga, is a social media app whereby users upload and share user-generated images, and GIFs. The app\'s content, generally referred to as "internet memes" or "internet jokes", is upvoted, downvoted, and commented on by users based on its popularity at a given time.</string>
    <string name="str_about_author">Khmaies Hassen and Malek Cheikh, undergraduate of Esprit.\nEmail:hssen.khmaies@esprit.tn, cheikh.malek@esprit.tn\n\nEstablished in 2003, the School of Engineering now hosts 5000 students in four specialties: Computer Science, Telecommunications, Civil Engineering and Electromechanical Engineering. The courses that can be followed during the day and also in the evening classes for employees. Esprit School of Engineering at the time of its creation was given as main mission to train engineers "autrement". For this purpose the school has adopted from the beginning a new pedagogy, dynamic putting the student at the center of the learning that has resulted in the adoption of the APP (learning by project / problem). www.esprit.tn</string>
    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_goga_main">GogaMainActivity</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
</resources>