<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/fragment_image_action_translate"
        android:icon="@drawable/mxx_holo_ic_translate_white"
        android:orderInCategory="25"
        android:visible="false"
        android:title="@string/menu_action_translate_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/fragment_image_action_copy"
        android:icon="@drawable/mxx_holo_ic_copy_white"
        android:orderInCategory="26"
        android:visible="false"
        android:title="@string/menu_action_copy_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_image_action_save"
        android:icon="@drawable/mxx_holo_ic_save_white"
        android:orderInCategory="27"
        android:visible="false"
        android:title="@string/menu_action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_image_action_weblink"
        android:icon="@drawable/mxx_holo_ic_web"
        android:orderInCategory="28"
        android:title="@string/menu_action_weblink"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_image_action_share"
        android:icon="@drawable/mxx_holo_ic_share_white"
        android:orderInCategory="29"
        android:title="@string/menu_action_share"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/fragment_image_action_share_all"
                android:orderInCategory="100"
                android:title="@string/menu_action_share_all"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/fragment_image_action_share_image"
                android:orderInCategory="100"
                android:title="@string/menu_action_share_image"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/fragment_image_action_share_text"
                android:orderInCategory="100"
                android:title="@string/menu_action_share_text"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>

</menu>