<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<item
        android:id="@+id/action_refresh"
        android:orderInCategory="99"
    android:icon="@drawable/mxx_holo_ic_refresh_white"
        android:title="@string/menu_action_refresh"
    app:showAsAction="always" />
     <item
        android:id="@+id/action_more"
        android:icon="@drawable/mxx_holo_ic_action_more_whitle"
        android:orderInCategory="100"
        android:title="@string/menu_action_more"
         app:showAsAction="always">
        <!-- submenu -->
        <menu>
            <item
                android:id="@+id/action_about"
                android:orderInCategory="100"
                android:title="@string/menu_action_about"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>

</menu>
